build(actions): cria ação de publicação do pacote Adiciona no github actions uma ação para publicação do pacote  de forma automatizada.
Fixes DTHFUI-4136

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@po-ui/ng-tslint",
   "version": "3.0.0",
-  "tag": "beta",
+  "tag": "next",
   "description": "PO Lint for TSLint",
   "author": "PO",
   "license": "MIT",
